# AutoTune_LM

./: .gitignore  CLAUDE.md  GEMINI.md  ProjectBreif.md  README.md  config.yaml  config_finetune.yaml  dataset.jsonl  fine_tune.py  main-cs.py  main-ref.py  main-v2.py  main.py  md_to_qa_dataset.py  pyproject.toml  requirements.txt  requirments.txt
.serena/: project.yml
configs/: data_prep.yaml  fine_tune.yaml  prompts.yaml
scripts/: generate_qa.py  generate_qa_dataset.py
src/: config.yaml  config_manager.py  example_usage.py  markdown_to_qa_dataset.py  requirements.txt  run_converter.sh  setup.sh  train_with_unsloth.py  unsloth_training_script.py
src/data_processing/: markdown_parser.py
src/fine_tuning/: unsloth_formatter.py
src/qa_generation/: ollama_client.py  prompt_templates.py  qa_generator.py
src/utils/: config_loader.py  evaluation.py
tests/: test_fine_tuning.py  test_markdown_parser.py  test_qa_generator.py
